# cuoiky

./: CMakeLists.txt  README.md  base_link.STL  controller_node.py  cuoiky.rviz  joint_names_cuoiky.yaml  package.xml  readme.md  sp_link.STL  st_link.STL  tt_link.STL
launch/: display.launch  gazebo.launch
meshes/: camera_link.STL  imu_link.STL  tien_link.STL  tp_link.STL  xoay_link.STL
src/: link_controller.py
urdf/: cuoiky.csv  cuoiky.urdf
urdf/config/: controllers.yaml
