<package format="2">
  <name>cuoiky</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for cuoiky</p>
    <p>This package contains configuration data, 3D models, and launch files for the cuoiky robot.</p>
  </description>
  
  <author>Kongfu</author>
  <maintainer email="kongfu@example.com">Kongfu</maintainer>
  
  <license>BSD</license>
  
  <!-- Build tool dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Runtime dependencies -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>
  


  <!-- Optional execution dependencies -->
  <exec_depend>rviz</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  
  <export>
    <architecture_independent />
    <!-- Nếu có plugin Gazebo, thêm dòng sau -->
    <!-- <gazebo_ros plugin_path="${prefix}/lib" /> -->
  </export>
</package>